api/swim_form/src/tests/derive/form/enum_duplicate_tags.stderr
error: Duplicate enumeration tag: "First"
  --> src/tests/derive/form/enum_duplicate_tags.rs:4:5
   |
4  | /     #[allow(non_snake_case)]
5  | |     #[derive(Form)]
6  | |     #[form_root(::swim_form)]
7  | |     enum Duplicates {
...  |
13 | |         Second,
14 | |     }
   | |_____^
